--- a/generic.html
+++ b/generic.html
@@ -61,9 +61,13 @@
 											<tbody>
 												<tr>
 													<td><a href="https://soundcloud.com/user-130344834/everyday-nothing-special-podcast-episode-1-welcome/s-q6s8n">001</a></td> 
-													<td>Rubber Noose</td>
+													<td>Explore Our Minds!</td>
 													<td>Jesus, Tommy and Tony talk about scary stuff as kids, workplace bothers and weird stuff.</td>
 												</tr>
+												<tr>
+													<td><a href ="">002</a></td>
+													<td>Threesomes!</td>
+													<td>Jesus, Tommy and Tony talk about being racist and threesomes!</td>
 											</tbody>
 										</table>
 									</div>
