--- a/generic.html
+++ b/generic.html
@@ -65,7 +65,7 @@
 													<td>Jesus, Tommy and Tony talk about scary stuff as kids, workplace bothers and weird stuff.</td>
 												</tr>
 												<tr>
-													<td><a href ="">002</a></td>
+													<td><a href ="https://soundcloud.com/user-130344834/episode-2-threesomes/s-tS5MV">002</a></td>
 													<td>Threesomes!</td>
 													<td>Jesus, Tommy and Tony talk about being racist and threesomes!</td>
 											</tbody>
