--- a/generic.html
+++ b/generic.html
@@ -68,6 +68,12 @@
 													<td><a href ="https://soundcloud.com/user-130344834/episode-2-threesomes/s-tS5MV">002</a></td>
 													<td>Threesomes!</td>
 													<td>Jesus, Tommy and Tony talk about being racist and threesomes!</td>
+												</tr>
+												<tr>
+													<td><a href ="https://soundcloud.com/everydaynothingspecial/episode-3-you-saved-my-life-ft-chance-todd-1">003</a></td>
+													<td>You Saved My Life ft. Chance Todd</td>
+													<td>Jesus, Tommy and Tony are joined by special guest Chance Todd. He tells us a crazy tale about his coworker.</td>
+												</tr>
 											</tbody>
 										</table>
 									</div>
