--- a/generic.html
+++ b/generic.html
@@ -44,10 +44,10 @@
 					<article id="main">
 						<header>
 							<h2>Podcast</h2>
-							<p>Everyday Nothing Special Podcast!</p>
+							<p>Listen to us ramble about stuff!</p>
 						</header>
 						<section>
-						<h3>Everyday Nothing Special Podcast</h3>
+						<h1>Everyday Nothing Special Podcast</h1>
 									<div class="table-wrapper">
 										<table class="alt">
 											
@@ -74,6 +74,12 @@
 													<td>You Saved My Life ft. Chance Todd</td>
 													<td>Jesus, Tommy and Tony are joined by special guest Chance Todd. He tells us a crazy tale about his coworker.</td>
 												</tr>
+												<tr>
+													<td><a href="https://soundcloud.com/everydaynothingspecial/episode-0-origins">004</a></td>
+													<td>Episode 0-rigins</td>
+													<td>Jesus, Tommy and Tony get into the origins of how they met. They veer off into a discussion of dreams, goals and never seen each other naked.</td>
+												</tr>
+											
 											</tbody>
 										</table>
 									</div>
@@ -82,7 +88,7 @@
 							<div class="inner">
 
 								<h3>Everyday Nothing Special Podcast!</h3>
-								<p>Welcome to the <strong>Everyday Nothing Special Podcast</strong> hosted by your favorites <strong>Jesus, Tony, Glen</strong> with occasional special guests. We sit down and talk about everyday nothing special things. Like how come bananas rot some god damn fast. Seriously that's messed up man.</p>
+								<p>Welcome to the <strong>Everyday Nothing Special Podcast</strong> hosted by your favorites <strong>Jesus, Tony, Tommy</strong> with occasional special guests. We sit down and talk about everyday nothing special things. Like how come bananas rot some god damn fast. Seriously that's messed up man.</p>
 
 								<hr />
 
