--- a/generic.html
+++ b/generic.html
@@ -79,6 +79,27 @@
 													<td>Episode 0-rigins</td>
 													<td>Jesus, Tommy and Tony get into the origins of how they met. They veer off into a discussion of dreams, goals and never seen each other naked.</td>
 												</tr>
+												<tr>
+													<td><a href="https://soundcloud.com/everydaynothingspecial/after-hours-rip-mc-hep-c">After Hours</a></td>
+													<td>R.I.P M.C Hep-C</td>
+													<td>EDNS honors a great hero and answers questions</td>
+												</tr>
+												<tr>
+													<td><a href="https://soundcloud.com/everydaynothingspecial/episode-5-without-tony-asmr-edition">005</a></td>
+													<td>Without Tony ASMR Edition</td>
+													<td>EDNS is missing a guy and you can bet they've gone rogue.</td>
+												</tr>
+												<tr>
+													<td><a href="https://soundcloud.com/everydaynothingspecial/episode-6-the-attack-of-the-soundboard">006</a></td>
+													<td>The Attack of the Soundboard</td>
+													<td>EDNS has a soundboard... Oh no.</td>
+												</tr>
+												<tr>
+													<td><a href="https://soundcloud.com/everydaynothingspecial/episode-7-rocking-solo">007</a></td>
+													<td>Rocking Solo</td>
+													<td>EDNS is one guy today.</td>
+												</tr>
+												
 											
 											</tbody>
 										</table>
