--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Spicy Piñata</h2>
-							<p>Best Place for giggles<br />
-							and everything good!<br />
-							</p>
+							<p>Your Life is Already Better!!</p>					
+							<p style="font-size:3px">*Experiences May Vary*</p>
 							<ul class="actions">
 								<li><a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w" class="button special">Youtube</a></li>
 							</ul>
