--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="generic.html"><img src="images/PodcastTile.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="podcast.html"><img src="images/PodcastTile.jpg" alt="" /></a></div><div class="content">
 								<h2>Everyday Nothing Special Podcast<br />
 								</h2>
 								<p>Listen to a couple of peeps ramble about everyday nothing special things.</p>
