--- a/podcast.html
+++ b/podcast.html
@@ -163,7 +163,11 @@
 													<td>Eating Each Other Out</td>
 													<td>EDNS eats each other</td>
 												</tr>													
-												
+												<tr>
+													<td><a href="https://soundcloud.com/everydaynothingspecial/episode-20-jesus-baby-nuts">020</a></td>
+													<td>Jesus' Baby Nuts</td>
+													<td>EDNS gets rid of trash and talks about baby nuts.</td>
+												</tr>													
 											</tbody>
 										</table>
 									</div>
