--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
+											<li><a href="home.html">Home</a></li>
 											<li><a href="podcast.html">Podcast</a></li>
 											<li><a href="elements.html">Videos</a></li>
 											<li><a href="#">About Us</a></li>
