--- a/videos.html
+++ b/videos.html
@@ -26,9 +26,9 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
+											<li><a href="home.html">Home</a></li>
 											<li><a href="podcast.html">Podcast</a></li>
-											<li><a href="elements.html">Videos</a></li>
+											<li><a href="videos.html">Videos</a></li>
 											<li><a href="#">About Us</a></li>
 											<li><a href="#">Contact Us</a></li>
 										</ul>
