--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spicy Piñata</a></h1>
+						<h1><a href="home.html">Spicy Piñata</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -26,7 +26,7 @@
 										<ul>
 											<li><a href="home.html">Home</a></li>
 											<li><a href="podcast.html">Podcast</a></li>
-											<li><a href="elements.html">Videos</a></li>
+											<li><a href="videos.html">Videos</a></li>
 											<li><a href="#">About Us</a></li>
 											<li><a href="#">Contact Us</a></li>
 										</ul>
