--- a/podcast.html
+++ b/podcast.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spicy Piñata</a></h1>
+						<h1><a href="home.html">Spicy Piñata</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -28,7 +28,7 @@
 										<ul>
 											<li><a href="home.html">Home</a></li>
 											<li><a href="podcast.html">Podcast</a></li>
-											<li><a href="elements.html">Videos</a></li>
+											<li><a href="videos.html">Videos</a></li>
 											<li><a href="#">About us</a></li>
 											<li><a href="#">Contact Us</a></li>
 										</ul>
