--- a/home.html
+++ b/home.html
@@ -50,28 +50,15 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>We are Spicy Piñata!<br />
-								</h2>
-								<p>We are a couple of friends looking to have fun and make good things.<br />
-								Enjoy content from podcasts, let's plays and more.</p>
-							</header>
-						</div>
-					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><a href="elements.html"><img src="images/Thumbnail.jpg" alt="" /></a></div><div class="content">
-								<h2>Those Poor Boys<br />
-								</h2>
-								<p>Some say that they cry themselves to sleep every night. Other say they smell like pepper. All I know, is that they're here to play some games and make you laugh.</p>
-							</div>
+						<section class="banner">
+							<div class="image"><a href="elements.html"><img src="images/Thumbnail.jpg" alt="" /></a></div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="podcast.html"><img src="images/PodcastTile.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="podcast.html"><img src="images/PodcastTile.jpg" alt="" /></a></div>
+							<div class="content">
 								<h2>Everyday Nothing Special Podcast<br />
 								</h2>
 								<p>Listen to a couple of peeps ramble about everyday nothing special things.</p>
