--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
-						<section class="banner">
+						<section class="spotlight">
 							<div class="image"><a href="elements.html"><img src="images/Thumbnail.jpg" alt="" /></a></div>
 						</section>
 						<section class="spotlight">
