--- a/home.html
+++ b/home.html
@@ -1,135 +1,158 @@
 <!DOCTYPE HTML>
-
+<!--
+	Big Picture by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Spicy Piñata</title>
+		<title>Big Picture by HTML5 UP</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="landing">
+	<body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+		<!-- Header -->
+			<header id="header">
+				<h1>Big Picture</h1>
+				<nav>
+					<ul>
+						<li><a href="#intro">Intro</a></li>
+						<li><a href="#one">What I Do</a></li>
+						<li><a href="#two">Who I Am</a></li>
+						<li><a href="#work">My Work</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="home.html">Spicy Piñata</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="home.html">Home</a></li>
-											<li><a href="podcast.html">Podcast</a></li>
-											<li><a href="videos.html">Videos</a></li>
-											<li><a href="#">About Us</a></li>
-											<li><a href="#">Contact Us</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
+		<!-- Intro -->
+			<section id="intro" class="main style1 dark fullscreen">
+				<div class="content">
+					<header>
+						<h2>Hey.</h2>
+					</header>
+					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
+					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<footer>
+						<a href="#one" class="button style2 down">More</a>
+					</footer>
+				</div>
+			</section>
+
+		<!-- One -->
+			<section id="one" class="main style2 right dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>What I Do</h2>
+					</header>
+					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+				</div>
+				<a href="#two" class="button style2 down anchored">Next</a>
+			</section>
+
+		<!-- Two -->
+			<section id="two" class="main style2 left dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>Who I Am</h2>
+					</header>
+					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+				</div>
+				<a href="#work" class="button style2 down anchored">Next</a>
+			</section>
+
+		<!-- Work -->
+			<section id="work" class="main style3 primary">
+				<div class="content">
+					<header>
+						<h2>My Work</h2>
+						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
+						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
 					</header>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Spicy Piñata</h2>
-							<p>Your Life is Already Better!!</p>					
-							<p style="font-size:10px">*Experiences May Vary*</p>
-							<ul class="actions">
-								<li><a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w" class="button special">Youtube</a></li>
-							</ul>
+					<!-- Gallery  -->
+						<div class="gallery">
+							<article class="from-left">
+								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+							</article>
 						</div>
-						<a href="#one" class="more scrolly">Our Stuff</a>
-					</section>
 
-				<!-- One -->
+				</div>
+			</section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><a href="elements.html"><img src="images/Thumbnail.jpg" alt="" /></a></div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><a href="podcast.html"><img src="images/PodcastTile.jpg" alt="" /></a></div>
-							<div class="content">
-								<h2>Everyday Nothing Special Podcast<br />
-								</h2>
-								<p>Listen to a couple of peeps ramble about everyday nothing special things.</p>
+		<!-- Contact -->
+			<section id="contact" class="main style3 secondary">
+				<div class="content">
+					<header>
+						<h2>Say Hello.</h2>
+						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+					</header>
+					<div class="box">
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
+								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
+								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
 							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><a href="elements.html"><img src="images/Live Action Small.jpg" alt="" /></a></div><div class="content">
-								<h2>Live Action Shorts
-								</h2>
-								<p>From skits to short films, there is plenty for the whole town. They'll make you laugh, they'll make you cry and they'll definely want to make you sue us because "I swear to god I thought of that idea! They stole from me!!"</p>
-							</div>
-						</section>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Our Weekly Release Schedule!</h2>
-								<p>Wondering what we're working on? Want to know when it's being released? Well... look.<br />
-								We are very busy people, but catch our shows when released.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Those Poor Boys</h3>
-									<p>New Videos every Monday and Friday. Check out our <a href = "https://www.youtube.com/channel/UCHXWAtXQEx8dlRDxyw-o21A?view_as=subscriber">Youtube!</a></p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Everyday Nothing Special Podcast</h3>
-									<p>New Podcasts every Wednesday! Stay tuned at <a href ="https://soundcloud.com/user-130344834">Soundcloud</a> and <a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w">Youtube</a>.</p>
+							<ul class="actions special">
+								<li><input type="submit" value="Send Message" /></li>
 							</ul>
-						</div>
-					</section>
+						</form>
+					</div>
+				</div>
+			</section>
 
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Check Us Out!</h2>
-								<p>We're always trying to get our stuff out there on as many things as possible. Check some of those out.</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="https://soundcloud.com/user-130344834" class="button fit special">SoundCloud</a></li>
-								<li><a href="https://vimeo.com/user69303538" class="button fit">Vimeo</a></li>
-							</ul>
-						</div>
-					</section>
+		<!-- Footer -->
+			<footer id="footer">
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://twitter.com/SpicyPinata" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/thespicypinata/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/thespicypinata/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
-							<li><a href="mailto:thespicypinata@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy;2017 Spicy Piñata</li><li><a href="index.html">Back to Home</a></li>
-						</ul>
-					</footer>
+				<!-- Icons -->
+					<ul class="icons">
+						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+					</ul>
 
-			</div>
+				<!-- Menu -->
+					<ul class="menu">
+						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+					</ul>
+
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
