--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				<h1>Spicy Piñata</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Welcome</a></li>
+						<li><a href="#intro">Home</a></li>
 						<li><a href="#one">Those Poor Boys</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#two">Podcasts</a></li>
+						<li><a href="#work">Videos</a></li>
+						<li><a href="#contact">Contact Us</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -69,16 +69,14 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Check These Out</h2>
+						<p>Whether it be Video Games, Podcasts or Shorts we will always entertain. Check us at on Soundcloud, Youtube and more.</p>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/video01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
