--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/video1.jpg" class="image fit"><img src="images/video1.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="https://youtu.be/DwVBVVxzUJw" class="image fit"><img src="images/video1.jpg" title="The Anonymous Red" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/video2.jpg" class="image fit"><img src="images/video2.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="https://youtu.be/qmD4liHl1uk" class="image fit"><img src="images/video2.jpg" title="Airchitecture II" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/video3.jpg" class="image fit"><img src="images/video3.jpg" title="Air Lounge" alt="" /></a>
+								<a href="https://youtu.be/pZcEPxBKD-c" class="image fit"><img src="images/video3.jpg" title="Air Lounge" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/video4.jpg" class="image fit"><img src="images/video4.jpg" title="Carry on" alt="" /></a>
+								<a href="https://youtu.be/xbGXwyvzFgs"><img src="images/video4.jpg" title="Carry on" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/video5.jpg" class="image fit"><img src="images/video5.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="https://youtu.be/FulY7cxmkUc" class="image fit"><img src="images/video5.jpg" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/video6.jpg" class="image fit"><img src="images/video6.jpg" title="Bent IX" alt="" /></a>
+								<a href="https://youtu.be/VTmxK6EPHIU" class="image fit"><img src="images/video6.jpg" title="Bent IX" alt="" /></a>
 							</article>
 						</div>
 
@@ -128,7 +128,7 @@
 						<li><a href="https://twitter.com/SpicyPinata" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/thespicypinata/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/thespicypinata/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-youtube"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w" class="icon fa-youtube"><span class="label">LinkedIn</span></a></li>
 
 					</ul>
 
