--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title><a href="#intro">Spicy Piñata</a></title>
+		<title>Spicy Piñata</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Spicy Piñata</h1>
+				<h1><a href="#intro">Spicy Piñata</a></h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Home</a></li>
@@ -76,16 +76,16 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="https://youtu.be/DwVBVVxzUJw" class="image fit"><img src="images/video1.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="https://youtu.be/DwVBVVxzUJw" class="image fit"><img src="images/video1.jpg" title="The Tony Show!" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="https://youtu.be/qmD4liHl1uk" class="image fit"><img src="images/video2.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="https://youtu.be/qmD4liHl1uk" class="image fit"><img src="images/video2.jpg" title="Mario Party Part 3" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="https://youtu.be/pZcEPxBKD-c" class="image fit"><img src="images/video3.jpg" title="Air Lounge" alt="" /></a>
+								<a href="https://youtu.be/pZcEPxBKD-c" class="image fit"><img src="images/video3.jpg" title="Overwatch: Obama!" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="https://youtu.be/xbGXwyvzFgs"><img src="images/video4.jpg" title="Carry on" alt="" /></a>
+								<a href="https://youtu.be/xbGXwyvzFgs" class="image fit"><img src="images/video4.jpg" title="Carry on" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="https://youtu.be/FulY7cxmkUc" class="image fit"><img src="images/video5.jpg" title="The sparkling shell" alt="" /></a>
