--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<a href="https://youtu.be/FulY7cxmkUc" class="image fit"><img src="images/video5.jpg" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="https://youtu.be/VTmxK6EPHIU" class="image fit"><img src="images/video6.jpg" title="Bent IX" alt="" /></a>
+								<a href="https://soundcloud.com/everydaynothingspecial" class="image fit"><img src="images/video6.jpg" title="Bent IX" alt="" /></a>
 							</article>
 						</div>
 
@@ -134,7 +134,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2017</li><li>Spicy Piñata</li>
 					</ul>
 
 			</footer>
