--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 								<a href="https://youtu.be/pZcEPxBKD-c" class="image fit"><img src="images/video3.jpg" title="Overwatch: Obama!" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="https://youtu.be/xbGXwyvzFgs" class="image fit"><img src="images/video4.jpg" title="Carry on" alt="" /></a>
+								<a href="https://youtu.be/xbGXwyvzFgs" class="image fit"><img src="images/video4.jpg" title="Resident Evil 7" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="https://youtu.be/FulY7cxmkUc" class="image fit"><img src="images/video5.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="https://youtu.be/FulY7cxmkUc" class="image fit"><img src="images/video5.jpg" title="Risk Of Rain" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="https://soundcloud.com/everydaynothingspecial" class="image fit"><img src="images/video6.jpg" title="Bent IX" alt="" /></a>
+								<a href="https://youtu.be/VTmxK6EPHIU" class="image fit"><img src="images/video6.jpg" title="Speed Runners" alt="" /></a>
 							</article>
 						</div>
 
