--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Those Poor Boys</h2>
+						<h2><a href="https://www.youtube.com/user/ThosePoorBoys"> Those Poor Boys </a></h2>
 					</header>
 					<p>
 					</p>
@@ -57,7 +57,7 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Everyday Nothing Special Podcast</h2>
+						<h2><a href="https://soundcloud.com/everydaynothingspecial"> Everyday Nothing Special Podcast </a></h2>
 					</header>
 					<p>
 					</p>
@@ -106,7 +106,7 @@
 						<p>Anything you want to ask or know? Shoot us a message!</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
+						<form method="post" action="MAILTO:thespicypinata@gmail.com" enctype="text/plain">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
